vercel config file added

--- a/TaskManager/server/vercel.json
+++ b/TaskManager/server/vercel.json
@@ -12,7 +12,7 @@
         {
             "src": "/(.*)",
             "dest": "server.js",
-            "methods": ["POST", "GET", "PUT", "DELETE"]
+            "methods": ["POST", "GET", "PUT", "DELETE", "OPTIONS"]
         }
     ]
 }
